<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="title_activity_about">About</string>

    <string name="text_about">This is a sample application built as part of a learning process.\n\nPROJECT STRUCTURE:\n\nGradle Version: 2.4\nAndroid Plugin Version: 1.2.3\nCompile SDK Version: API 22: Android 5.1 (Lollipop)\nBuild Tools Version: 22.0.1\n\nVERSION INFORMATION:\n\nVersion: 1.0\nDeveloped by: Ahmed Omer\nReviewed By: Faizan Tariq\nConfiz Limited</string>
    <string name="text_default">0</string>
    <string name="action_about">About</string>

    <string name="btn_allclear">AC</string>
    <string name="btn_invert">+/−</string>
    <string name="btn_percentage">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_minus">−</string>
    <string name="btn_plus">+</string>
    <string name="btn_equals">=</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>

</resources>
